temp/usecase2/application/usecase2-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: usecase2-app
