temp/usecase2/application/usecase2-app-front.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mssql-app-deployment
  namespace: usecase2-app
  labels:
    app: mssql-container-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-container-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mssql-container-app
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: mssql-container-app
          securityContext:
            privileged: true
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'quay.io/ocpmigrate/mssql-sample-app:microsoft'
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      serviceAccountName: mssql-persistent-sa
      serviceAccount: mssql-persistent-sa
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 600
