temp/usecase2/application/usecase2-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mssql-app-route
  namespace: usecase2-app
spec:
#  host: mssql-app-route-mssql-persistent.apps.d751.example.opentlc.com
  path: /
  to:
    kind: Service
    name: mssql-app-service
    weight: 100
  wildcardPolicy: None

EOF
